# CheshireLane

./: .gitignore  Cargo.toml  LICENSE  README.md
A_need/: A_web.py  B_iptables.sh  C_iptables.sh  cert.pem  mitmproxy-ca.pem  指南.md
assets/dispatch/: servers.json  version.json
assets/sdk/: code.json  errorcode.json  settings.json
assets/tls/: key.pem
crates/common/: Cargo.toml
crates/common/src/: command.rs  lib.rs  logging.rs  time.rs  toml.rs
crates/config/: Cargo.toml
crates/config/src/: config.default.toml  database.rs  dispatch.rs  game.rs  gate.rs  lib.rs  resource.rs  sdk.rs  tls.rs
crates/data/: Cargo.toml
crates/data/src/: lib.rs
crates/data/src/schemas/: chapter_template.rs  mod.rs  ship_data_template.rs  ship_skin_template.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  schema.rs  utils.rs
crates/dispatch-server/: Cargo.toml
crates/dispatch-server/src/: dispatch_config.rs  main.rs
crates/dispatch-server/src/handler/: mod.rs  proto_handlers.rs
crates/ecs/activity/: Cargo.toml
crates/ecs/activity/src/: lib.rs  limit_challenge.rs  mini_game.rs
crates/ecs/activity/src/activity/: mod.rs  notify.rs  permanent.rs
crates/ecs/activity/src/event/: mod.rs
crates/ecs/activity/src/reflux/: mod.rs
crates/ecs/combat/: Cargo.toml
crates/ecs/combat/src/: lib.rs
crates/ecs/combat/src/chapter/: mod.rs
crates/ecs/combat/src/fleet/: mod.rs
crates/ecs/combat/src/world/: mod.rs  notify.rs
crates/ecs/command/: Cargo.toml
crates/ecs/command/src/: lib.rs
crates/ecs/database/: Cargo.toml
crates/ecs/database/src/: lib.rs
crates/ecs/inventory/: Cargo.toml
crates/ecs/inventory/src/: lib.rs
crates/ecs/inventory/src/bag/: mod.rs
crates/ecs/inventory/src/equip/: equip_skin.rs  mod.rs
crates/ecs/inventory/src/ship/: mod.rs  notify.rs  statistics.rs
crates/ecs/inventory/src/skin/: mod.rs
crates/ecs/login/: Cargo.toml
crates/ecs/login/src/: connection_mgr.rs  lib.rs
crates/ecs/message/: Cargo.toml
crates/ecs/message/src/: event.rs  output.rs
crates/ecs/persistence/: Cargo.toml
crates/ecs/persistence/src/: lib.rs  player_info.rs
crates/ecs/player/: Cargo.toml
crates/ecs/player/src/: lib.rs  plugin.rs
crates/ecs/system/: Cargo.toml
crates/ecs/system/src/: chat.rs  educate.rs  guild.rs  lib.rs  military_exercise.rs  remaster.rs  server_notice.rs
crates/ecs/system/src/bay/: mod.rs
crates/ecs/system/src/commander/: mod.rs  notify.rs
crates/ecs/system/src/daily/: mod.rs
crates/ecs/system/src/dorm/: mod.rs
crates/ecs/system/src/game_room/: mod.rs
crates/ecs/system/src/mail/: compensate.rs  mod.rs
crates/ecs/system/src/navy_academy/: mod.rs
crates/ecs/system/src/notification/: mod.rs
crates/ecs/system/src/shop/: mod.rs  notify.rs
crates/ecs/system/src/task/: init.rs  mod.rs  total_task.rs  week_progress.rs
crates/ecs/technology/: Cargo.toml
crates/ecs/technology/src/: lib.rs
crates/ecs/technology/src/blueprint/: mod.rs
crates/ecs/technology/src/tech_set/: mod.rs
crates/ecs/technology/src/technology/: mod.rs  notify.rs
crates/ecs/time/: Cargo.toml
crates/ecs/time/src/: lib.rs
crates/encryption/: Cargo.toml
crates/encryption/src/: lib.rs  md5.rs
crates/game-server/: Cargo.toml
crates/game-server-core/: Cargo.toml
crates/game-server-core/src/: command.rs  lib.rs  player_world.rs  simulator.rs
crates/game-server/src/: db_worker.rs  main.rs  message_handler.rs
crates/game-server/src/command/: commands.rs  mod.rs
crates/gate-server/: Cargo.toml
crates/gate-server/src/: inner_handler.rs  main.rs  outer_handler.rs  session.rs
crates/network/: Cargo.toml
crates/network/src/: inner_packet.rs  lib.rs  listener.rs  packet.rs  tcp_listener.rs
crates/network/src/tcp_server/: connection.rs  mod.rs  packet_handler.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto_derive/: Cargo.toml
crates/proto/proto_derive/src/: lib.rs
crates/proto/src/: common.rs  guild.rs  lib.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p17.rs  p18.rs  p19.rs  p20.rs  p22.rs  p24.rs  p25.rs  p26.rs  p27.rs  p28.rs  p29.rs  p30.rs  p33.rs  p34.rs  p40.rs  p50.rs  p60.rs  p61.rs  p62.rs  p63.rs  p64.rs  p70.rs
crates/sdk-server/: Cargo.toml
crates/sdk-server/src/: main.rs
crates/sdk-server/src/handlers/: account.rs  app.rs  index.rs  mod.rs
crates/sdk-server/src/handlers/pages/: index.rs
crates/sdk-server/src/handlers/user/: create.rs  login.rs  migrate.rs  mod.rs
infrastructure/: docker-compose.yml
xtask/: Cargo.toml
xtask/src/: main.rs
