[package]
name = "xtask"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
clap.workspace = true
