[package]
name = "common"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
toml.workspace = true
rustyline-async.workspace = true
tokio.workspace = true
chrono.workspace = true
async-trait.workspace = true

[target.'cfg(windows)'.dependencies]
ansi_term.workspace = true
