[package]
name = "config"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
common.workspace = true
serde.workspace = true
