[package]
name = "data"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
paste.workspace = true
config.workspace = true
common.workspace = true
