[package]
name = "database"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
surrealdb.workspace = true
pbkdf2.workspace = true
rand.workspace = true
password-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
common.workspace = true
config.workspace = true
