[package]
name = "game-server"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
proto.workspace = true
common.workspace = true
config.workspace = true
network.workspace = true
database.workspace = true
data.workspace = true
game-server-core.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde_json.workspace = true
ecs-persistence.workspace = true
ecs-message.workspace = true
ecs-command.workspace = true
async-trait.workspace = true
