[package]
name = "proto"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
proto_derive = { path = "proto_derive" }
prost.workspace = true
prost-types.workspace = true
serde.workspace = true

[build-dependencies]
prost-build.workspace = true
