[package]
name = "sdk-server"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
axum.workspace = true
axum-server.workspace = true
rustls.workspace = true
tower-http.workspace = true

serde.workspace = true
serde_json.workspace = true

anyhow.workspace = true
thiserror.workspace = true

askama.workspace = true

config.workspace = true
common.workspace = true
database.workspace = true
