[package]
name = "ecs-database"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
edition.workspace = true

[dependencies]
bevy_ecs.workspace = true
ecs-persistence.workspace = true
common.workspace = true
tokio.workspace = true
serde_json.workspace = true
